[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
description = "Peripheral access API for STM32F103XX microcontrollers"
documentation = "https://docs.rs/stm32f103xx"
keywords = ["no-std", "arm", "cortex-m", "stm32"]
license = "MIT OR Apache-2.0"
name = "stm32f103xx-interrupt"
repository = "https://github.com/lyvyw/stm32f103xx-interrupt"
version = "0.8.0"

[dependencies]
bare-metal = "0.2.3"
cortex-m = "0.5.4"
vcell = {version = "0.1.0", default-features=false}
